modfied again the file just to check some commands

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
     <h1 ><i style="color: white;">This is my first time, i will push any directory in my github repository</i></h1>
     <h1><b style="color: white;">FOUNDER OF THIS WEBPAGE IS SHUBHAM SINGH KHATI</b></h1>
-    <h1 style="color: white;">This webpage is in developing phase</h1>
+    <h1 style="color: white;">This webpage is in developing phase,We will see you again Bye Bye</h1>
     <style></style>
 </body>
 </html>
