giving web address to images

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitandGithub</title>
-    <link rel="icon" type="image/jpg" href="C:\Users\TK Chauhan\Downloads\blackcoder.jpg">
+    <link rel="icon" type="image/jpg" href="images/blackcoder.jpg">
     
 </head>
-<body background="C:\Users\TK Chauhan\Downloads\kaliret.jpg" >
+<body background="images/kaliret.jpg" >
     <style>
         /* body {
           background-color: rgb(129, 184, 202);
