--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitandGithub</title>
-    <link rel="icon" type="image/jpg" href="images\blackcoder.jpg">
+    <link rel="icon" type="image/jpg" href="images/blackcoder.jpg">
     
 </head>
-<body background="images\kaliret.jpg" >
+<body background="images/kaliret.jpg" >
     <style>
         /* body {
           background-color: rgb(129, 184, 202);
@@ -20,7 +20,7 @@
     <h1 style="color: white;">This webpage is in developing phase,We will see you again Bye Bye</h1>
     <p style="color: white;">Image of founder of this webpage wearing hoodies</p>
     <br>
-    <h1><b style="color: white;">Shubham loves coding I have taken a challenge to do five quetions on leetcode every day for 3 months and i will be succesful in this <img src="C:\Users\TK Chauhan\Downloads\blackcoder.jpg" alt="a guy wearing hoodie and face is not visible" width="270" height="350"> </b></h1> 
+    <h1><b style="color: white;">Shubham loves coding I have taken a challenge to do five quetions on leetcode every day for 3 months and i will be succesful in this <img src="images/blackcoder.jpg" alt="a guy wearing hoodie and face is not visible" width="270" height="350"> </b></h1> 
     <style></style>
 </body>
 </html>
