--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1 style="color: white;">This webpage is in developing phase,We will see you again Bye Bye</h1>
     <p style="color: white;">Image of founder of this webpage wearing hoodies</p>
     <br>
-    <h1><b style="color: white;">Shubham loves coding I have taken a challenge to do five quetions on leetcode every day for 3 months and i will be succesful in this <img src="images/blackcoder.jpg" alt="a guy wearing hoodie and face is not visible" width="270" height="350"> </b></h1> 
+    <h1><b style="color: white;">Shubham loves coding<img src="images/blackcoder.jpg" alt="a guy wearing hoodie and face is not visible" width="270" height="350"> </b></h1> 
     <style></style>
 </body>
 </html>
